# environmental-grib-generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  windows-utf8.manifest
docs/: ARCHITECTURE.md  JOB_PROTOCOL.md  PARITY.md
include/environmental_grib/: arco.h  copernicus.h  environment.h  error.h  geo.h  grib.h  job.h  model.h  netcdf.h  platform.h  providers.h  random_access.h  remote_currents.h  rtofs.h  security.h  sources.h  tpxo.h  ukv.h  waves.h  weather.h  xtd.h  xtd_package.h
src/: arco.cpp  cli.cpp  copernicus.cpp  environment.cpp  geo.cpp  grib.cpp  job.cpp  model.cpp  netcdf.cpp  providers.cpp  random_access.cpp  remote_currents.cpp  rtofs.cpp  security.cpp  sources.cpp  tpxo.cpp  tpxo_model.cpp  ukv.cpp  waves.cpp  weather.cpp  xtd.cpp  xtd_crypto_internal.h  xtd_package.cpp
tests/: differential_parity.py  engine_tests.cpp  environmental_merge_tests.cpp  make_tpxo_fixture.py  xtd_test_support.cpp  xtd_test_support.h  xtd_tests.cpp
